--- a/index.html
+++ b/index.html
@@ -1,42 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <h1>hola</h1>
     <div class="espacios">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dicta harum id! Deserunt incidunt, nam optio corporis iste eveniet, inventore numquam esse atque illum quibusdam aliquid iure natus. Nisi, sit.</p>
-
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dicta harum
+        id! Deserunt incidunt, nam optio corporis iste eveniet, inventore
+        numquam esse atque illum quibusdam aliquid iure natus. Nisi, sit.
+      </p>
     </div>
     <div class="">hola</div>
     <ul>
-        <li><a href="#">Holfweerfwef</a></li>
-        <li><a href="#">Holwefwefwefa</a></li>
-        <li><a href="#">Hoewfewfwela</a></li>
-        <li><a href="#">Hofwefwefwela</a></li>
+      <li><a href="#">Holfweerfwef</a></li>
+      <li><a href="#">Holwefwefwefa</a></li>
+      <li><a href="#">Hoewfewfwela</a></li>
+      <li><a href="#">Hofwefwefwela</a></li>
     </ul>
     <span>holaewrwerwer</span>
-    <br><br><br><br>
+    <br /><br /><br /><br />
     <form action="" method="get">
-        <label for="">nombre</label>
-        <input type="text">
-        <button type="submit">Enviar</button>
+      <label for="">nombre</label>
+      <input type="text" />
+      <button type="submit">Enviar</button>
     </form>
-    <div style="width:300px;border:3px solid green;">
-        <a href="" style="width:500px; margin-top:20px; display:block;">hola</a>
+    <div style="width: 300px; border: 3px solid green">
+      <a href="" style="width: 500px; margin-top: 20px; display: block">hola</a>
     </div>
     <section>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quas in numquam porro esse neque dolor eveniet explicabo, provident harum nobis voluptatum necessitatibus aut ullam magnam. Quod aliquid omnis tenetur.
-
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quas in
+      numquam porro esse neque dolor eveniet explicabo, provident harum nobis
+      voluptatum necessitatibus aut ullam magnam. Quod aliquid omnis tenetur.
     </section>
     <section>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam natus nam, a animi ipsam itaque, ut odit voluptas velit et, dolor beatae laudantium eligendi alias autem sint eius recusandae amet?
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam natus nam,
+      a animi ipsam itaque, ut odit voluptas velit et, dolor beatae laudantium
+      eligendi alias autem sint eius recusandae amet?
     </section>
-    <section>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus, delectus ratione explicabo blanditiis reprehenderit unde eligendi inventore maiores nemo iure iusto debitis quos ad! Aliquid cupiditate vel architecto placeat!</section>
-    <p><img src="https://www.shutterstock.com/image-illustration/experience-mesmerizing-world-butterfly-animal-260nw-2355746757.jpg" alt=""></p>
-</body>
+    <section>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus,
+      delectus ratione explicabo blanditiis reprehenderit unde eligendi
+      inventore maiores nemo iure iusto debitis quos ad! Aliquid cupiditate vel
+      architecto placeat!
+    </section>
+    <div class="container">
+      <h2>Lista de tareas</h2>
+      <ul>
+        <li>Estudiar CSS</li>
+        <li>Estudiar JS</li>
+        <li>Estudiar HTML</li>
+      </ul>
+    </div>
+
+    <p>
+      <img
+        src="https://www.shutterstock.com/image-illustration/experience-mesmerizing-world-butterfly-animal-260nw-2355746757.jpg"
+        alt=""
+      />
+    </p>
+  </body>
 </html>
