agregando js basico

--- a/index.html
+++ b/index.html
@@ -7,61 +7,39 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <h1>hola</h1>
-    <div class="espacios">
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel dicta harum
-        id! Deserunt incidunt, nam optio corporis iste eveniet, inventore
-        numquam esse atque illum quibusdam aliquid iure natus. Nisi, sit.
-      </p>
-    </div>
-    <div class="">hola</div>
-    <ul>
-      <li><a href="#">Holfweerfwef</a></li>
-      <li><a href="#">Holwefwefwefa</a></li>
-      <li><a href="#">Hoewfewfwela</a></li>
-      <li><a href="#">Hofwefwefwela</a></li>
-    </ul>
-    <span>holaewrwerwer</span>
-    <br /><br /><br /><br />
-    <form action="" method="get">
-      <label for="">nombre</label>
-      <input type="text" />
-      <button type="submit">Enviar</button>
-    </form>
-    <div style="width: 300px; border: 3px solid green">
-      <a href="" style="width: 500px; margin-top: 20px; display: block">hola</a>
-    </div>
-    <section>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae quas in
-      numquam porro esse neque dolor eveniet explicabo, provident harum nobis
-      voluptatum necessitatibus aut ullam magnam. Quod aliquid omnis tenetur.
-    </section>
-    <section>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam natus nam,
-      a animi ipsam itaque, ut odit voluptas velit et, dolor beatae laudantium
-      eligendi alias autem sint eius recusandae amet?
-    </section>
-    <section>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio natus,
-      delectus ratione explicabo blanditiis reprehenderit unde eligendi
-      inventore maiores nemo iure iusto debitis quos ad! Aliquid cupiditate vel
-      architecto placeat!
-    </section>
-    <div class="container">
-      <h2>Lista de tareas</h2>
+    <h1>codiGO</h1>
+    <header>header</header>
+    <nav>
       <ul>
-        <li>Estudiar CSS</li>
-        <li>Estudiar JS</li>
-        <li>Estudiar HTML</li>
+        <li><a href="#">Enlace 01</a></li>
+        <li><a href="#">Enlace 02</a></li>
+        <li><a href="#">Enlace 03</a></li>
+        <li><a href="#">Enlace 04</a></li>
       </ul>
+    </nav>
+    <section>
+      <article>
+        <h2>Venta de telefonos</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ad
+          corporis sint suscipit vitae culpa quo veniam, ullam consequuntur,
+          ipsam praesentium itaque eos deserunt voluptas quod, nam fuga.
+          Eligendi, vel.
+        </p>
+      </article>
+    </section>
+    <small>small</small><span>span</span><img src="#" alt="imagen" />
+    <img src="#" alt="iamgen 2" /><br>
+    <div>
+      hola
     </div>
 
-    <p>
-      <img
-        src="https://www.shutterstock.com/image-illustration/experience-mesmerizing-world-butterfly-animal-260nw-2355746757.jpg"
-        alt=""
-      />
-    </p>
+    <form action="" class="formulario">
+      <label for="">nombre y apellido :</label>
+      <input type="text" placeholder="Ingrese su nombre">
+    </form>
+
+    <footer>pie de pagina</footer>
+    <script src="./app.js"></script>
   </body>
 </html>
