--- a/index.html
+++ b/index.html
@@ -1,45 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <h1>codiGO</h1>
-    <header>header</header>
-    <nav>
-      <ul>
-        <li><a href="#">Enlace 01</a></li>
-        <li><a href="#">Enlace 02</a></li>
-        <li><a href="#">Enlace 03</a></li>
-        <li><a href="#">Enlace 04</a></li>
-      </ul>
-    </nav>
-    <section>
-      <article>
-        <h2>Venta de telefonos</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil ad
-          corporis sint suscipit vitae culpa quo veniam, ullam consequuntur,
-          ipsam praesentium itaque eos deserunt voluptas quod, nam fuga.
-          Eligendi, vel.
-        </p>
-      </article>
-    </section>
-    <small>small</small><span>span</span><img src="#" alt="imagen" />
-    <img src="#" alt="iamgen 2" /><br>
-    <div>
-      hola
-    </div>
-
-    <form action="" class="formulario">
-      <label for="">nombre y apellido :</label>
-      <input type="text" placeholder="Ingrese su nombre">
-    </form>
-
-    <footer>pie de pagina</footer>
-    <script src="./app.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>practicando</title>
+</head>
+<body>
+  <h1>Titulo de la web</h1>
+  <script src="./app.js"></script>
+</body>
 </html>
